package local.sop.sopinfo.sop.application.api.dto;

import java.util.UUID;

public record SOPQuery(
    UUID uuid
) {}
